--- a/views/subdir/index.html
+++ b/views/subdir/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Sub Dir Baby</h1>
+    <h1>Sub Dir</h1>
 </body>
 </html>
